--- a/src/components/Sidebar/Main/main.css
+++ b/src/components/Sidebar/Main/main.css
@@ -132,6 +132,9 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  background:#edf0f1;
+  border-radius: 20px;
+  width:400px;
  }
  .result img{
   border-radius: 30px;
@@ -142,6 +145,9 @@
   display: flex;
   align-items: start;
   gap: 20px;
+  background:#edf0f1;
+  border-radius: 21px;
+
 }
 .loader{
   width: 100%;
